# porydelete

./: .gitignore  Cargo.toml  INSTALL.md  README.md  TODO.md  Todofile  map.json  pd_ascii_logo.txt
src/: .check.rs.swp  args.rs  build.rs  check.rs  del_attribute.rs  del_map.rs  del_tileset.rs  filter.rs  lib.rs  list.rs  m.rs  ma.rs  main.rs  map_json_attr.rs  text.rs  ts.rs
src/del_tileset/: del_anim.rs
