[package]
name = "porydelete"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fstream = "0.1.2"
indexmap = {version = "1.9.1", features = ["serde-1"]}
fs_extra = "1.3.0"