[package]
name = "porydelete"
version = "2.0.1"
edition = "2021"
description = "About Porydelete is a CLI tool which allows you to delete specific parts of the 3.gen decomp projects such as Pokemon, Items, Maps, Tilesets, Events and more"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = {version = "1.9.1", features = ["serde-1"]}

# File stream
fstream = "0.1.2"
fs_extra = "1.3.0"
clap = { version = "4.4.1", features = ["derive"] }
